[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/KenneyPixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://World/Block.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menus/DirtSpawner.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_left = 5.68043
margin_right = 5.47004
margin_top = 6.52197
margin_bottom = 6.1012
draw_center = false

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/colors/font_color_hover = Color( 0.431373, 0.431373, 0.431373, 1 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 3 )

[node name="MainMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 49.0
margin_top = 28.0
margin_right = 111.0
margin_bottom = 116.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 62.0
margin_bottom = 10.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2"]
margin_right = 62.0
margin_bottom = 10.0
text = "Under: Dig Hole"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 62.0
margin_bottom = 88.0

[node name="Play" type="Button" parent="VBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
margin_left = 15.0
margin_right = 45.1505
margin_bottom = 22.6232
size_flags_horizontal = 4
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer/VBoxContainer3"]
margin_left = 9.0
margin_top = 26.0
margin_right = 51.1505
margin_bottom = 48.6232
size_flags_horizontal = 4
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer/VBoxContainer3"]
margin_left = 17.0
margin_top = 52.0
margin_right = 44.1505
margin_bottom = 74.6232
size_flags_horizontal = 4
text = "Quit"

[node name="DirtSpawner" parent="." instance=ExtResource( 5 )]
rotation = 2.25972

[node name="DirtSpawner2" parent="." instance=ExtResource( 5 )]
position = Vector2( 160, 0 )
rotation = 3.91083

[node name="Block" parent="." instance=ExtResource( 4 )]
position = Vector2( 4, 140 )

[node name="Block2" parent="." instance=ExtResource( 4 )]
position = Vector2( 12, 140 )

[node name="Block3" parent="." instance=ExtResource( 4 )]
position = Vector2( 20, 140 )

[node name="Block4" parent="." instance=ExtResource( 4 )]
position = Vector2( 28, 140 )

[node name="Block5" parent="." instance=ExtResource( 4 )]
position = Vector2( 36, 140 )

[node name="Block6" parent="." instance=ExtResource( 4 )]
position = Vector2( 44, 140 )

[node name="Block7" parent="." instance=ExtResource( 4 )]
position = Vector2( 52, 140 )

[node name="Block8" parent="." instance=ExtResource( 4 )]
position = Vector2( 60, 140 )

[node name="Block9" parent="." instance=ExtResource( 4 )]
position = Vector2( 68, 140 )

[node name="Block10" parent="." instance=ExtResource( 4 )]
position = Vector2( 76, 140 )

[node name="Block11" parent="." instance=ExtResource( 4 )]
position = Vector2( 84, 140 )

[node name="Block12" parent="." instance=ExtResource( 4 )]
position = Vector2( 92, 140 )

[node name="Block13" parent="." instance=ExtResource( 4 )]
position = Vector2( 100, 140 )

[node name="Block14" parent="." instance=ExtResource( 4 )]
position = Vector2( 108, 140 )

[node name="Block15" parent="." instance=ExtResource( 4 )]
position = Vector2( 116, 140 )

[node name="Block16" parent="." instance=ExtResource( 4 )]
position = Vector2( 124, 140 )

[node name="Block17" parent="." instance=ExtResource( 4 )]
position = Vector2( 132, 140 )

[node name="Block18" parent="." instance=ExtResource( 4 )]
position = Vector2( 140, 140 )

[node name="Block19" parent="." instance=ExtResource( 4 )]
position = Vector2( 148, 140 )

[node name="Block20" parent="." instance=ExtResource( 4 )]
position = Vector2( 156, 140 )

[node name="Block21" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 140 )

[node name="Block22" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 132 )

[node name="Block23" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 124 )

[node name="Block24" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 116 )

[node name="Block25" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 108 )

[node name="Block26" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 100 )

[node name="Block27" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 92 )

[node name="Block28" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 84 )

[node name="Block29" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 76 )

[node name="Block30" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 68 )

[node name="Block31" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 60 )

[node name="Block32" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 52 )

[node name="Block33" parent="." instance=ExtResource( 4 )]
position = Vector2( 164, 44 )

[node name="Block34" parent="." instance=ExtResource( 4 )]
position = Vector2( -4, 132 )

[node name="Block35" parent="." instance=ExtResource( 4 )]
position = Vector2( -4, 124 )

[node name="Block36" parent="." instance=ExtResource( 4 )]
position = Vector2( -4, 116 )

[node name="Block37" parent="." instance=ExtResource( 4 )]
position = Vector2( -4, 108 )

[node name="Block38" parent="." instance=ExtResource( 4 )]
position = Vector2( -4, 100 )

[node name="Block39" parent="." instance=ExtResource( 4 )]
position = Vector2( -4, 92 )

[node name="Block40" parent="." instance=ExtResource( 4 )]
position = Vector2( -4, 84 )

[node name="Block41" parent="." instance=ExtResource( 4 )]
position = Vector2( -4, 76 )

[node name="Block42" parent="." instance=ExtResource( 4 )]
position = Vector2( -4, 68 )

[node name="Block43" parent="." instance=ExtResource( 4 )]
position = Vector2( -4, 60 )

[node name="Block44" parent="." instance=ExtResource( 4 )]
position = Vector2( -4, 52 )

[node name="Block45" parent="." instance=ExtResource( 4 )]
position = Vector2( -4, 44 )

[connection signal="pressed" from="VBoxContainer/VBoxContainer3/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer3/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer3/Quit" to="." method="_on_Quit_pressed"]
